values/octoprint/raw/ingress.pre.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: octoprint-external
  namespace: octoprint
spec:
  type: ExternalName
  externalName: 192.168.1.30
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: kong
    kubernetes.io/tls-acme: "true"
    plugins.konghq.com: oidc,cors
  name: octoprint-external
  namespace: octoprint
spec:
  rules:
  - host: octoprint.szymonrichert.pl
    http:
      paths:
      - backend:
          serviceName: octoprint-external
          servicePort: 5000
        path: /
  tls:
  - hosts:
    - octoprint.szymonrichert.pl
    secretName: octoprint-tls
